<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/msgCenter"
        android:icon="@drawable/ic_message_24dp"
        android:title="@string/message_center_text" />

    <item
        android:id="@+id/articleCollect"
        android:icon="@drawable/ic_collections_24dp"
        android:title="@string/article_collect_text" />

    <item
        android:id="@+id/articleShare"
        android:icon="@drawable/ic_book_share_24dp"
        android:title="@string/article_share_text" />

    <item
        android:id="@+id/websiteCollect"
        android:icon="@drawable/ic_turned_in_24dp"
        android:title="@string/website_collect_text" />

    <item
        android:id="@+id/projectShare"
        android:icon="@drawable/ic_book_share_24dp"
        android:title="@string/project_share_text" />
<!--

    <item
        android:id="@+id/integral"
        android:icon="@drawable/ic_message_24dp"
        android:title="@string/integral_text" />

    <item
        android:id="@+id/integralRule"
        android:icon="@drawable/ic_message_24dp"
        android:title="@string/integral_rule_text" />

    <item
        android:id="@+id/integralRank"
        android:icon="@drawable/ic_message_24dp"
        android:title="@string/integral_rank_text" />
-->

</menu>