<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/dp_15"
    android:layout_marginEnd="@dimen/dp_15"
    app:cardCornerRadius="@dimen/dp_8">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_10">

        <ImageView
            android:id="@+id/projectImg"
            android:layout_width="@dimen/dp_100"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/articleTitleTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_5"
            android:ellipsize="end"
            android:maxLines="2"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/sp_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/projectImg"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/authorTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_7"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/sp_13"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/articleTitleTv"
            app:layout_constraintTop_toBottomOf="@id/articleTitleTv" />

        <TextView
            android:id="@+id/timeTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/sp_13"
            app:layout_constraintBottom_toBottomOf="@id/labelLl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/labelLl" />

        <LinearLayout
            android:id="@+id/labelLl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_7"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@id/articleTitleTv"
            app:layout_constraintTop_toBottomOf="@id/authorTv">

            <TextView
                android:id="@+id/pinTopTag"
                style="@style/home_article_tags_textView_style"
                android:background="@drawable/bg_holo_red_dark_stroke"
                android:text="@string/pin_to_top_text"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="gone" />

            <TextView
                android:id="@+id/newestTag"
                style="@style/home_article_tags_textView_style"
                android:background="@drawable/bg_holo_red_light_stroke"
                android:text="@string/newest_text"
                android:textColor="@android:color/holo_red_light"
                android:visibility="gone" />

            <TextView
                android:id="@+id/publishTag"
                style="@style/home_article_tags_textView_style"
                android:background="@drawable/bg_09b636_stroke"
                android:text="@string/published_by_this_site_text"
                android:textColor="@color/color_09b636"
                android:visibility="gone" />

            <TextView
                android:id="@+id/q_aTag"
                style="@style/home_article_tags_textView_style"
                android:background="@drawable/bg_09b636_stroke"
                android:text="@string/newest_text"
                android:textColor="@color/color_09b636"
                android:visibility="gone" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>